--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:vantipuli.a@northeastern.edu">email</a></li>
-        		<li><a href="https://github.com/aishuvenkat09">github.com/aishuvenkat09</a></li>
+        		<li><a href="https://github.com/aishuvenkat09">GitHub</a></li>
+			<li><a href="https://linkedin.com/in/aishwarya009">Linkedin</a></li>
 			</ul>
 		</footer>
 	</body>
