--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Aishwarya!</h1>
-				<p>I'm a Data Science Masters student from Northeastern University <a href="/about">Read more about my life...</a></p>
+				<p>I'm a Data Science Masters student from Northeastern University. I love playing with data and crunching numbers.
+				   I'm fascinated by the idea of capturing meaningful information from meaningless data.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:vantipuli.a@northeastern.edu">email</a></li>
+        		<li><a href="mailto:vantipuli.a@northeastern.edu">Email</a></li>
         		<li><a href="https://github.com/aishuvenkat09">GitHub</a></li>
 			<li><a href="https://linkedin.com/in/aishwarya009">Linkedin</a></li>
 			</ul>
