--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     		<div class="blurb">
         		<h1>Hi there, I'm Aishwarya!</h1>
 				<p>I'm a Data Science Masters student from Northeastern University. <br> I love playing with data and crunching numbers.
-				   <br>I'm fascinated by the idea of capturing meaningful information from meaningless data.</p>
+				   I'm fascinated by the idea of capturing meaningful information from meaningless data.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
