--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="Personal website of Mahesh Gopinathan" />
-    <meta name="author" content="Mahesh Gopinathan" />
-    <title>Mahesh Gopinathan</title>
+    <meta name="author" content="Aishwarya Vantipuli" />
+    <title>Aishwarya Vantipuli</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -31,7 +31,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            <span class="d-block d-lg-none">Mahesh Gopinathan</span>
+            <span class="d-block d-lg-none">Aishwarya Vantipuli</span>
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
                     src="img/Mahesh_Profile_circle.png" alt="" /></span>
         </a>
@@ -59,14 +59,14 @@
             <div class="resume-section-content">
                 <h1 class="mb-0">
                     Mahesh
-                    <span class="text-primary">Gopinathan</span>
+                    <span class="text-primary">Aishwarya</span>
                 </h1>
                 <div class="subheading mb-5">
-                    <a href="./Mahesh_Gopinathan_Resume.pdf" target="_blank">Resume</a> ·
-                    <a href="tel:+13476523062" target="_blank">(+1) 3476523062 </a> ·
-                    <a href="mailto:maheshg@nyu.edu" target="_blank">maheshg@nyu.edu</a> ·
+                    <a href="./Resume_Aishwarya.pdf" target="_blank">Resume</a> ·
+                    <a href="tel:+12176954626" target="_blank">(+1) 2176954626 </a> ·
+                    <a href="mailto:aishuvenkat09@gmail.com" target="_blank">aishuvenkat09@gmail.com</a> ·
                     <!-- <a href="https://maps.google.com/?q=MicrosoftBuilding44" target="_blank">Redmond, Washington</a> -->
-                    Brooklyn, New York, 11220
+                    Boston, MA, 02130
                     <br />
                     <br />
                     Dream it, Believe it, Build it !!!
@@ -81,16 +81,16 @@
                     New York University, seeking full-time opportunities from May 2021.
                 </p>
                 <div class="social-icons">
-                    <a class="social-icon" href="https://www.linkedin.com/in/maheshg23/" target="_blank"><i
+                    <a class="social-icon" href="https://www.linkedin.com/in/aishwarya009/" target="_blank"><i
                             class="fab fa-linkedin-in"></i></a>
-                    <a class="social-icon" href="https://github.com/maheshg23" target="_blank"><i
+                    <a class="social-icon" href="https://github.com/Aishuvenkat09/" target="_blank"><i
                             class="fab fa-github"></i></a>
                     <!-- <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a> -->
                     <a class="social-icon" href="https://www.instagram.com/maheshg_23/" target="_blank"><i
                             class="fab fa-instagram"></i></a>
                 </div>
                 <div class="resume-section-link text-md-center">
-                    <a href="./Mahesh_Gopinathan_Resume.pdf" target="_blank"><button type="button"
+                    <a href="./Resume_Aishwarya.pdf" target="_blank"><button type="button"
                             class="btn btn-primary">Resume</button></a>
                 </div>
             </div>
