--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <a class="social-icon" href="https://github.com/Aishuvenkat09/" target="_blank"><i
                             class="fab fa-github"></i></a>
                     <!-- <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a> -->
-                    <a class="social-icon" href="https://www.instagram.com/maheshg_23/" target="_blank"><i
+                    <a class="social-icon" href="https://www.instagram.com/aishuvenkat09//" target="_blank"><i
                             class="fab fa-instagram"></i></a>
                 </div>
                 <div class="resume-section-link text-md-center">
@@ -571,29 +571,23 @@ reporting high and less correlated features.
                 <ul class="fa-ul mb-0">
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        <a href="https://confirm.udacity.com/KYKCXF2G" target="_blank">AWS Cloud Architect</a> By
-                        Udacity in July 2020.
+                        <a href="https://courses.cognitiveclass.ai/certificates/d4949089835b4152b9b0ce8552f5bdde" target="_blank">Data Analysis with Python</a> By
+                       Cognitive Class.
                     </li>
                     <br />
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        <a href="https://confirm.udacity.com/VV7GST2U" target="_blank">Blockchain Developer</a> By
+                        <a href="https://courses.cognitiveclass.ai/certificates/3bfc81d00c504bc9a9bcf2ef18675fca" target="_blank">Data Visualization with Python</a> By
                         Udacity in May 2020.
                     </li>
                     <br />
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        <a href="https://www.coursera.org/account/accomplishments/certificate/QLH2RJ9DTSRN"
-                            target="_blank">Machine
-                            Learning</a> By Stanford Online in April 2020.
+                        <a href="https://www.datacamp.com/statement-of-accomplishment/course/2b655a6aa15384969a206410e8be0cc8b80ddf2e"
+                            target="_blank">Introduction to Python</a> By Stanford Online in April 2020.
                     </li>
                     <br />
-                    <li>
-                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                        <a href="https://www.certmetrics.com/infor/public/badge.aspx?i=24&t=c&d=2019-05-06&ci=IN00127953"
-                            target="_blank">Infor
-                            Certified M3 Integration Consultant v13.3 (M3-INTC133-100)</a> by Infor in May 2019.
-                    </li>
+                
                 </ul>
             </div>
         </section>
@@ -607,12 +601,10 @@ reporting high and less correlated features.
                         <h3 class="mb-0"><a href="http://www.ijircce.com/upload/2016/june/20_CREDIT.pdf"
                                 target="_blank">Credit Card
                                 Transaction Using Face Recognition Authentication</a></h3>
-                        <div class="subheading mb-3">Authors: Mahesh Gopinathan, Akshay Prakash, Maram Gowri, Muzameel
-                            Ahmed</div>
+                        <div class="subheading mb-3">Authors:Ricardo Baeza-Yates, Aishwarya Vantipuli, Adam Ribaudo
+                            </div>
                         <p>
-                            Published in the <a href="http://www.ijircce.com/" target="_blank">International Journal of
-                                Innovative
-                                Research in Computer and Communication Engineering (IJIRCCE)</a><br /><br />
+                            Published in the <a href="https://recsys.acm.org/recsys20/" target="_blank"> ACM Recommender Systems conference (RecSys)</a><br /><br />
 
                             This paper proposes a method for a credit card transaction system that will integrate with
                             face detection and face recognition technology using Haar Cascade and GLCM algorithms,
@@ -640,10 +632,10 @@ reporting high and less correlated features.
                 <h2 class="mb-5">Organizations</h2>
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">NYU IT - Global Office of Information Security (GOIS)</h3>
+                        <h3 class="mb-0">NEU - Global Office of Information Security (GOIS)</h3>
                         <div class="subheading mb-3">Graduate Research Asistant</div>
                         <p>
-                            • Implementing a new GRC RSAM Module for internal NYU departments. Working on data migration of the legacy data from word documents into the RSAM tool using RestAPI's. <br />
+                            • Implementing a new GRC RSAM Module for internal Northeastern University departments. Working on data migration of the legacy data from word documents into the RSAM tool using RestAPI's. <br />
                             • Familiarizing with the RSM Software tool and understanding the Database Schema and testing out the RestAPI’s. <br />
                             • Worked on Corelink Software (an internal NYU Implementation) cloud network that can send and receive data from any device. <br />
                             • Researching on the Secure Data Environments across various universities on multiple domains and finalizing a report. <br />
@@ -715,20 +707,20 @@ reporting high and less correlated features.
             <div class="my-auto">
                 <h2 class="mb-5">CONTACT ME</h2>
                 <!-- <h4 class="mb-0"><br /> -->
-                <a href="tel:+13476523062" target="_blank">(+1) 3476523062 </a><br />
-                <a href="mailto:maheshg@nyu.edu" target="_blank">maheshg@nyu.edu</a><br />
-                <a href="mailto:gmn1994@gmail.com" target="_blank">gmn1994@gmail.com</a><br />
-                Brooklyn, New York 11220
+                <a href="tel:+12176954626" target="_blank">(+1) 2176954626 </a><br />
+                <a href="mailto:aishuvenkat09@gmail.com" target="_blank">aishuvenkat09@gmail.com</a><br />
+                <a href="mailto:vantipuli.a@northeastern.edu" target="_blank">vantipuli.a@northeastern.edu</a><br />
+                Boston, Massachusetts, 02130
                 <!-- </h4> -->
                 <br />
                 <br />
                 <div class="social-icons">
-                    <a class="social-icon" href="https://www.linkedin.com/in/maheshg23/" target="_blank"><i
+                    <a class="social-icon" href="https://www.linkedin.com/in/aishwarya009/" target="_blank"><i
                             class="fab fa-linkedin-in"></i></a>
-                    <a class="social-icon" href="https://github.com/maheshg23" target="_blank"><i
+                    <a class="social-icon" href="github.com/Aishuvenkat09" target="_blank"><i
                             class="fab fa-github"></i></a>
                     <!-- <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a> -->
-                    <a class="social-icon" href="https://www.instagram.com/maheshg_23/" target="_blank"><i
+                    <a class="social-icon" href="https://www.instagram.com/aishuvenkat09/" target="_blank"><i
                             class="fab fa-instagram"></i></a>
                 </div>
             </div>
