--- a/index.html
+++ b/index.html
@@ -545,44 +545,10 @@ reporting high and less correlated features.
                         </p>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">December 2019</span>
+                        <span class="text-primary">January 2019</span>
                     </div>
                 </div>
-                <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                    <div class="resume-content mr-auto">
-                        <h3 class="mb-0"><a href="#projects" target="_blank">Credit Card Transaction With Face
-                                Recognition Authentication</a></h3>
-                        <p>
-                            Developed a software solution that aims to provide secure Credit Card Transactions to a
-                            credit card user in order to avoid Internet fraud. The software uses Face Recognition
-                            technology and authenticates the online credit card transaction performed by the user to
-                            minimize the risk of online frauds and adds an extra layer of security.
-                            The proposed system describes a method for credit card transaction system which will
-                            integrate with the face detection and face recognition technology using Haar Cascade and
-                            GLCM algorithms, respectively<br />
-                            • Technologies: Java, JSP, Servlets, MySQL.
-                        </p>
-                    </div>
-                    <div class="resume-date text-md-right">
-                        <span class="text-primary">May 2016</span>
-                    </div>
-                </div>
-                <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                    <div class="resume-content mr-auto">
-                        <h3 class="mb-0"><a href="#projects" target="_blank">Payroll Management System</a></h3>
-                        <p>
-                            I had done this project during the 12th Grade to gain practical knowledge about the
-                            technologies used. I developed a portal where we can log in and check out the database of
-                            the employees in a company and also add and delete records. I can also check out the best
-                            employee based on performance ratings. All this was done using a custom dummy SQL in house
-                            database. This was a simple mini-project during the school days<br />
-                            • Technologies: Java, JDBC connector, MySQL, NetbeansIDE, Java Swings.
-                        </p>
-                    </div>
-                    <div class="resume-date text-md-right">
-                        <span class="text-primary">April 2012</span>
-                    </div>
-                </div>
+                
             </div>
         </section>
         <hr class="m-0" />
@@ -600,13 +566,13 @@ reporting high and less correlated features.
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                         <a href="https://courses.cognitiveclass.ai/certificates/3bfc81d00c504bc9a9bcf2ef18675fca" target="_blank">Data Visualization with Python</a> By
-                        Udacity in May 2020.
+                        Cognitive Class.
                     </li>
                     <br />
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                         <a href="https://www.datacamp.com/statement-of-accomplishment/course/2b655a6aa15384969a206410e8be0cc8b80ddf2e"
-                            target="_blank">Introduction to Python</a> By Stanford Online in April 2020.
+                            target="_blank">Introduction to Python</a> By DataCamp
                     </li>
                     <br />
                 
@@ -620,29 +586,29 @@ reporting high and less correlated features.
                 <h2 class="mb-5">Publications</h2>
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0"><a href="http://www.ijircce.com/upload/2016/june/20_CREDIT.pdf"
+                        <h3 class="mb-0"><a href="https://recsys.acm.org/recsys20/accepted-contributions/"
                                 target="_blank">Credit Card
                                 Transaction Using Face Recognition Authentication</a></h3>
                         <div class="subheading mb-3">Authors:Ricardo Baeza-Yates, Aishwarya Vantipuli, Adam Ribaudo
                             </div>
                         <p>
-                            Published in the <a href="https://recsys.acm.org/recsys20/" target="_blank"> ACM Recommender Systems conference (RecSys)</a><br /><br />
+                            Published in the <a href="https://recsys.acm.org/recsys20/" target="_blank"> Goal-driven Command Recommendations for Analysts</a><br /><br />
 
-                            This paper proposes a method for a credit card transaction system that will integrate with
-                            face detection and face recognition technology using Haar Cascade and GLCM algorithms,
-                            respectively. Our solution proposes a technique by which the features extracted from the
-                            image clicked during the payment made by the user on the e-commerce portal will be compared
-                            to the features from the training dataset of the respective user. Features extracted from
-                            the Images stored in an administrator database acts as the training data set for
-                            authentication purposes.
+                            In this paper, we propose a framework to provide goal-driven data command recommendations to the user 
+                            by leveraging unstructured logs. We use the log data of a web-based analytics software to train our neural
+                            network models and quantify their performance, in comparison to relevant and competitive baselines.
+                            We propose a custom loss function to tailor the recommended data commands according to the goal information provided exogenously.
+                            We also propose an evaluation metric that captures the degree of goal orientation of the recommendations.
+                            We demonstrate the promise of our approach by evaluating the models with the proposed metric and showcasing 
+                            the robustness of our models in the case of adversarial examples, where the user activity is misaligned with selected goal, through offline evaluation.
                             <br />
                             <br />
-                            <a href="http://www.ijircce.com/upload/2016/june/20_CREDIT.pdf"
+                            <a href="https://recsys.acm.org/recsys20/accepted-contributions/"
                                 target="_blank">Publication</a>
                         </p>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">June 2016</span>
+                        <span class="text-primary">March 2020</span>
                     </div>
                 </div>
             </div>
