--- a/index.html
+++ b/index.html
@@ -620,72 +620,50 @@ reporting high and less correlated features.
                 <h2 class="mb-5">Organizations</h2>
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">NEU - Global Office of Information Security (GOIS)</h3>
-                        <div class="subheading mb-3">Graduate Research Asistant</div>
+                        <h3 class="mb-0">Northeastern University</h3>
+                        <div class="subheading mb-3">Graduate Teaching Asistant</div>
                         <p>
-                            • Implementing a new GRC RSAM Module for internal Northeastern University departments. Working on data migration of the legacy data from word documents into the RSAM tool using RestAPI's. <br />
-                            • Familiarizing with the RSM Software tool and understanding the Database Schema and testing out the RestAPI’s. <br />
-                            • Worked on Corelink Software (an internal NYU Implementation) cloud network that can send and receive data from any device. <br />
-                            • Researching on the Secure Data Environments across various universities on multiple domains and finalizing a report. <br />
+                            Tutor and instruct students on concepts in Algorithms and Python for Data Science and coordinate
+                                with Professor in creating, grading the assignments and exams.
+                            
                         </p>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">July 2020 - Present</span>
+                        <span class="text-primary">January 2021 - Present</span>
                     </div>
                 </div>
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">iCoders Group</h3>
+                        <h3 class="mb-0">Women in Cyber Security (WiCS)</h3>
                         <div class="subheading mb-3">Head Coordinator</div>
                         <p>
-                            As a volunteer initially and then later becoming the head of the Technical Wing at Dayananda
-                            Sagar College of Engineering (Information Science Dept), I have organized several Intra and
+                            As a volunteer initially and then later becoming the head of the Technical Wing at 
+                            Northeastern University (Computer Science Dept), I have organized several Intra and
                             Intercollege coding competitions and also conducted other technical events, quiz and event
                             planning. I also managed the volunteers assigned to this group to plan the events
                             frequently.
                         </p>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">August 2015 - June 2016</span>
+                        <span class="text-primary">January 2019 - Present</span>
                     </div>
                 </div>
 
+                
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">GLUG (GNU Linux User's Group) - DSCE</h3>
-                        <div class="subheading mb-3">Member of the founding committee</div>
-                        <p>
-                            Being one of the co-founders of GLUG-DSCE, a self-driven student organization on-campus
-                            affiliated to Free Software Movement Karnataka (FSMK), I have contributed as a volunteer,
-                            active member, and a resource person.
-                            <br />
-                            I have upheld the mission to spread awareness on free and open-source software, GNU, and
-                            Free software movement ideology. I have played a pivotal role in bridging the organization
-                            with the home-grown student club GLUG-DSCE (Global Linux Users' Group). I have volunteered
-                            and organized various technical activities throughout the Karnataka State. I have shared my
-                            technical knowledge as a resource person for multiple technical events and workshops.
-                        </p>
-                    </div>
-                    <div class="resume-date text-md-right">
-                        <span class="text-primary">February 2013 - June 2016</span>
-                    </div>
-                </div>
-
-                <div class="resume-item d-flex flex-column flex-md-row mb-5">
-                    <div class="resume-content mr-auto">
-                        <h3 class="mb-0">Free Software Movement Karnataka</h3>
+                        <h3 class="mb-0">Council for Green Revolution, Hyderabad</h3>
                         <div class="subheading mb-3">Coordinator</div>
                         <p>
                             During my association with the organization, I have contributed as a volunteer,
-                            co-coordinator. I have participated and raised concerns about social matters such as Net
-                            Neutrality. I have actively engaged in technical summer camps and Sunday schools that
+                            co-coordinator. I have participated and raised concerns about environmental isuues.
+                            I have actively engaged in technical summer camps and Sunday schools that
                             provide a common platform for students, industrialists, and educationalists to interact
-                            and exchange knowledge about the trending technological advancements and burning social
-                            concerns.
+                            and exchange knowledge about the trending technological advancements in agrculture.
                         </p>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">February 2013 - November 2015</span>
+                        <span class="text-primary">February 2013 - November 2018</span>
                     </div>
                 </div>
             </div>
