--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@ reporting high and less correlated features.
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0"><a href="https://recsys.acm.org/recsys20/accepted-contributions/"
                                 target="_blank">Credit Card
-                                Transaction Using Face Recognition Authentication</a></h3>
+                                Toal-driven Command Recommendations for Analysts</a></h3>
                         <div class="subheading mb-3">Authors:Ricardo Baeza-Yates, Aishwarya Vantipuli, Adam Ribaudo
                             </div>
                         <p>
@@ -644,7 +644,7 @@ reporting high and less correlated features.
                 
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
-                        <h3 class="mb-0">Council for Green Revolution, Hyderabad</h3>
+                        <h3 class="mb-0">Council for Green Revolution, India</h3>
                         <div class="subheading mb-3">Coordinator</div>
                         <p>
                             During my association with the organization, I have contributed as a volunteer,
