--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                 </div>
 
 
-                <p class="lead mb-5">Hello there! I am currently pursuing an M.S. in Data Science from Northeastern University.
-                    My projects have given me hands-on experience in developing machine learning and deep learning models in the 
-                    domains of Health Care and natural language processing. My focus lies in Algorithms, Machine Learning, Artificial Intelligence,
-                    Visualization, and Data Modeling. I am comfortable in languages like Python, R, MySQL and C with good experience in Data Mining and
-                    Machine learning algorithms. I am a self-driven, creative and hardworking person who equally enjoys collaborating with others as well
-                    as working independently to complete assigned tasks. Through academic coursework, research, leadership positions, and challenging projects,
-                    I have developed a strong and varied skill-set. I aim to apply my multidisciplinary research experience along with
-                    my human-centered software development skills to solve short and long-term problems.
+                <p class="lead mb-5">Hello there! I'm Aishwarya. I love crunching numbers and playing with the data. 
+                    I'm fascinated by the idea of capturing and transforming data into numbers, numbers into words, words into stories and stories into actions
+                    to make the world a better place.
+                    
+                    A few interesting things about me. 
+                    I love to read science fiction (my favorite is Da Vinci Code). I am also an avid gamer. 
+                    I love to play competitive strategy games and first-person shooters. Lastly, I love learning. 
+                    Every day I push myself to learn something new, whether that be about machine learning, software engineering, or miscellaneous facts about the universe.
                 </p>
                 <div class="social-icons">
                     <a class="social-icon" href="https://www.linkedin.com/in/aishwarya009/" target="_blank"><i
