--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     I'm fascinated by the idea of capturing and transforming data into numbers, numbers into words, words into stories and stories into actions
                     to make the world a better place.
                     
-                    A few interesting things about me. 
+                    A few interesting things about me. <br/>
                     I love to read science fiction (my favorite is Da Vinci Code). I am also an avid gamer. 
                     I love to play competitive strategy games and first-person shooters. Lastly, I love learning. 
                     Every day I push myself to learn something new, whether that be about machine learning, software engineering, or miscellaneous facts about the universe.
