--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
 
                 <p class="lead mb-5">Hello there! I'm Aishwarya. I love crunching numbers and playing with the data. 
                     I'm fascinated by the idea of capturing and transforming data into numbers, numbers into words, words into stories and stories into actions
-                    to make the world a better place.
+                    to make the world a better place.<br/>
                     
-                    A few interesting things about me. <br/>
-                    I love to read science fiction (my favorite is Da Vinci Code). I am also an avid gamer. 
-                    I love to play competitive strategy games and first-person shooters. Lastly, I love learning. 
+                    A few interesting things about me... <br/>
+                    I love to read science fiction (my favorite is Da Vinci Code).<br/>
+                    I am also an avid gamer. I love to play competitive strategy games and first-person shooters. <br/>
+                    Lastly, I love learning. 
                     Every day I push myself to learn something new, whether that be about machine learning, software engineering, or miscellaneous facts about the universe.
                 </p>
                 <div class="social-icons">
