--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     to make the world a better place.<br/>
                     
                     A few interesting things about me... <br/>
-                    I love to read science fiction (my favorite is Da Vinci Code).<br/>
+                    I love to watch science fictions (Christopher Nolan's movies are my favorite).<br/>
                     I am also an avid gamer. I love to play competitive strategy games and first-person shooters. <br/>
                     Lastly, I love learning. 
                     Every day I push myself to learn something new, whether that be about machine learning, software engineering, or miscellaneous facts about the universe.
