--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
                 <p class="lead mb-5">Hello there! I'm Aishwarya. I love crunching numbers and playing with the data. 
                     I'm fascinated by the idea of capturing and transforming data into numbers, numbers into words, words into stories and stories into actions
                     to make the world a better place.<br/>
-                    
+                
+                 </p>
+                 <p class="lead mb-5">
                     A few interesting things about me... <br/>
                     I love to watch science fictions (Christopher Nolan's movies are my favorite).<br/>
                     I am also an avid gamer. I love to play competitive strategy games and first-person shooters. <br/>
