--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <a class="social-icon" href="https://github.com/Aishuvenkat09/" target="_blank"><i
                             class="fab fa-github"></i></a>
                     <!-- <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a> -->
-                    <a class="social-icon" href="https://www.instagram.com/aishuvenkat09//" target="_blank"><i
+                    <a class="social-icon" href="https://www.instagram.com/aishuvenkat09/" target="_blank"><i
                             class="fab fa-instagram"></i></a>
                 </div>
                 <div class="resume-section-link text-md-center">
