--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">Northeastern University, Boston</h3>
-                        <div class="subheading mb-3">Graduate Research  Assistant </div>
+                        <div class="subheading mb-3"> Research  Scientist </div>
                 <p>
                         <ul class="fa-ul mb-0">
                             <li>
@@ -181,7 +181,7 @@ and positions and reduce data collection time by 65%
                         </p>
                     </div>
                     <div class="resume-date text-md-center">
-                        <span class="text-primary">January 2019 – September 2020</span>
+                        <span class="text-primary">January 2019 – May 2021</span>
                         <br>
                        
                     </div>
@@ -231,9 +231,9 @@ and positions and reduce data collection time by 65%
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">Northeastern Univeristy</h3>
                         <div class="subheading mb-3">Master of Science, Data Science</div>
-                        <p>GPA: 3.5/4</p>
+                        <p>GPA: 3.6/4</p>
                         <p>Coursework:<br />
-                            Supervused Machine Learning<br />
+                            Supervised Machine Learning<br />
                             Unsupervised Machine Learning<br />
                             Deep Learning<br />
                             Natural Language Processing<br />
@@ -637,7 +637,7 @@ reporting high and less correlated features.
                         </p>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">January 2021 - Present</span>
+                        <span class="text-primary">January 2021 - May 2021</span>
                     </div>
                 </div>
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -653,7 +653,7 @@ reporting high and less correlated features.
                         </p>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">January 2019 - Present</span>
+                        <span class="text-primary">January 2019 - May 2021</span>
                     </div>
                 </div>
 
