--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <span class="text-primary">Aishwarya</span>
                 </h1>
                 <div class="subheading mb-5">
-                    <a href="./Resume_Aishwarya.pdf" target="_blank">Resume</a> ·
+                    <a href="./Resume_Aishwarya - updated.pdf" target="_blank">Resume</a> ·
                 
                     <a href="mailto:aishuvenkat09@gmail.com" target="_blank">aishuvenkat09@gmail.com</a> ·
                     <!-- <a href="https://maps.google.com/?q=MicrosoftBuilding44" target="_blank">Redmond, Washington</a> -->
