--- a/index.html
+++ b/index.html
@@ -722,10 +722,10 @@ reporting high and less correlated features.
             <div class="my-auto">
                 <h2 class="mb-5">CONTACT ME</h2>
                 <!-- <h4 class="mb-0"><br /> -->
-                <a href="tel:+12176954626" target="_blank">(+1) 2176954626 </a><br />
-                <a href="mailto:aishuvenkat09@gmail.com" target="_blank">aishuvenkat09@gmail.com</a><br />
+               
+       
                 <a href="mailto:vantipuli.a@northeastern.edu" target="_blank">vantipuli.a@northeastern.edu</a><br />
-                Boston, Massachusetts, 02130
+                Cincinnati, Ohio, 45220
                 <!-- </h4> -->
                 <br />
                 <br />
