--- a/index.html
+++ b/index.html
@@ -450,18 +450,21 @@ and positions and reduce data collection time by 65%
                             </li>
 
                         <li>
+                            <i class="fa-li fa fa-circle text-info"></i>
                             Expanded the model optimization capability and
                             integrated boneage workflow by using new tool Weights and Biases (Wandb) for experiment tracking.
 
                             </li>
 
                         <li>
+                            <i class="fa-li fa fa-circle text-info"></i>
                             Minimized the Mean Absolute Error on RSNA test data by 54% (from 11 to 5 months) using MONAI framework. 
                             Implemented unit testing.
 
                             </li>
                             
                         <li>
+                            <i class="fa-li fa fa-circle text-info"></i>
                             Bolstered AI-ARC team on technical issues and error solving methods related to wandb, cuda, python and git.
                          </li>
                             
