--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="subheading mb-5">
                     <a href="./Resume_Aishwarya - updated.pdf" target="_blank">Resume</a> ·
                 
-                    <a href="mailto:aishuvenkat09@gmail.com" target="_blank">aishuvenkat09@gmail.com</a> ·
+                    <a href="mailto:vantipuli.a@northeastern.edu" target="_blank">vantipuli.a@northeastern.edu</a> ·
                     <!-- <a href="https://maps.google.com/?q=MicrosoftBuilding44" target="_blank">Redmond, Washington</a> -->
                     Cincinnati, OH, 45220
                     <br />
@@ -701,9 +701,35 @@ reporting high and less correlated features.
         <!-- Publications -->
         <section class="resume-section" id="publications">
             <div class="resume-section-content">
+  
                 <h2 class="mb-5">Publications</h2>
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
+
+<h3 class="mb-0"><a href="https://recsys.acm.org/recsys20/accepted-contributions/"
+                                target="_blank">A Microservices based open-source MLOPs Stack for Medical Imaging Research</a></h3>
+                        <div class="subheading mb-3">Authors: Aishwarya Vantipuli, Elanchezhian Somasundaram
+                            </div>
+                        <p>
+                            Published in the <a href="https://siim.org/page/meetings" target="_blank">SIIM 2022</a><br /><br />
+
+                           Numerous machine learning (ML) tools with variety of features are available to conduct ML experiments in an organized fashion
+                           such that every step of the ML-lifecycle is reproducible and follows industry best practices. These software tools along with 
+                            the hardware and networking infrastructure together are defined as the ML Operations (MLOps) stack. Micro-services have become the
+                            standard in which latest ML tools and packages are distributed. An MLOps stack based on micro-services can provide a simple solution 
+                            for teams that do not have dedicated server management infrastructure to manage multiple Al/ML projects on shared compute and storage resources.
+                            <br />
+                            <br />
+                            <a href="https://recsys.acm.org/recsys20/accepted-contributions/"
+                                target="_blank">Publication</a>
+                        </p>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">March 2020</span>
+                    </div>
+
+
+                        
                         <h3 class="mb-0"><a href="https://recsys.acm.org/recsys20/accepted-contributions/"
                                 target="_blank">Credit Card
                                 Toal-driven Command Recommendations for Analysts</a></h3>
