--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ and positions and reduce data collection time by 65%
                         </p>
                     </div>
                     <div class="resume-date text-md-right">
-                        <span class="text-primary">January 2021</span>
+                        <span class="text-primary">January 2022</span>
                     </div>
                 </div>
 
@@ -706,7 +706,7 @@ reporting high and less correlated features.
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
 
-<h3 class="mb-0"><a href="https://recsys.acm.org/recsys20/accepted-contributions/"
+                        <h3 class="mb-0"><a href="https://recsys.acm.org/recsys20/accepted-contributions/"
                                 target="_blank">A Microservices based open-source MLOPs Stack for Medical Imaging Research</a></h3>
                         <div class="subheading mb-3">Authors: Aishwarya Vantipuli, Elanchezhian Somasundaram
                             </div>
@@ -728,7 +728,7 @@ reporting high and less correlated features.
                         <span class="text-primary">March 2020</span>
                     </div>
 
-
+                </div>
                         
                         <h3 class="mb-0"><a href="https://recsys.acm.org/recsys20/accepted-contributions/"
                                 target="_blank">Credit Card
